template/42_search_before_template_out.txt
template$ g++ 42_search_before_template.cpp 
42_search_before_template.cpp: In function ‘int search(complexCls*, complexCls, int)’:
42_search_before_template.cpp:94:13: error: could not convert ‘operator==((*(const complexCls*)(a + ((sizetype)(((long unsigned int)i) * 16)))), v)’ from ‘complexCls’ to ‘bool’
   94 |     if(a[i] == v)
      |        ~~~~~^~~~
      |             |
      |             complexCls
template$ 
